--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterClass()[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@415138788</td>   <td></td> </tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@415138788</td>   <td></td> </tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.afterMethod()[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@415138788</td>   <td></td> </tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>54</td> <td title="&lt;&lt;NewTest.afterSuite()[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@415138788</td>   <td></td> </tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>2</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@415138788</td>   <td></td> </tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>-35</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeClass()[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@415138788</td>   <td></td> </tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@415138788</td>   <td></td> </tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeMethod()[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@415138788</td>   <td></td> </tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>-49</td> <td title="&gt;&gt;NewTest.beforeSuite()[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@415138788</td>   <td></td> </tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>-39</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@415138788</td>   <td></td> </tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f(java.lang.Integer, java.lang.String)[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">f</td> 
+<tr bgcolor="6ae0ad">  <td>17/08/02 09:42:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderLearn.verifyUser(java.lang.String, java.lang.String)[pri:0, instance:TankLearn2.Learn.DataProviderLearn@4de8b406]">verifyUser</td> 
   <td>main@415138788</td>   <td></td> </tr>
-<tr bgcolor="6ae0ad">  <td>17/07/31 10:10:13</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.f(java.lang.Integer, java.lang.String)[pri:0, instance:TankLearn2.Learn.NewTest@23ceabc1]">f</td> 
+<tr bgcolor="6ae0ad">  <td>17/08/02 09:42:15</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderLearn.verifyUser(java.lang.String, java.lang.String)[pri:0, instance:TankLearn2.Learn.DataProviderLearn@4de8b406]">verifyUser</td> 
+  <td>main@415138788</td>   <td></td> </tr>
+<tr bgcolor="6ae0ad">  <td>17/08/02 09:42:15</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderLearn.verifyUser(java.lang.String, java.lang.String)[pri:0, instance:TankLearn2.Learn.DataProviderLearn@4de8b406]">verifyUser</td> 
   <td>main@415138788</td>   <td></td> </tr>
 </table>
